--- a/ml_notes/cs229/cs229_local.html
+++ b/ml_notes/cs229/cs229_local.html
@@ -266,26 +266,57 @@ y_0 &amp; = {\text{argmin}}_y \max_x f(x, y).
 <p>In the context of SVMs, the name <em>kernel</em> comes from the idea of a <a href="https://en.wikipedia.org/wiki/Positive-definite_kernel">positive-definite kernel</a>, which originated mainly in work done by James Mercer, although as far as I can tell the actual name <em>positive-definite kernel</em> came from a 1904 paper of David Hilbert on Fredholm integral equations of the second kind.</p>
 <p>Based on <a href="http://math.stackexchange.com/a/1281138/10785">this math.stackexchange answer</a>, it sounds like the group-theoretic and algebraic use cases — that is, the two listed above — of the word <em>kernel</em> are not formally linked. Rather, it seems that Ivar Fredholm used the French word <em>noyau</em> in a paper on integral equations that later became <em>kernel</em> in the aforementioned paper of Hilbert. <em>Noyau</em> roughly means <em>core</em>, and was perhaps used because it is inside an integral when a convolution is performed. The referenced answer states that the original Hilbert paper never justifies the term, so I suppose it’s up to folks who understand that paper to make an educated guess as to why it was chosen; or by looking at the corresponding Fredholm paper.</p>
 <h3 id="the-gaussian-kernel"><span class="header-section-number">3.1.3</span> The Gaussian kernel</h3>
-<p>Let’s confirm that the Gaussian kernel is indeed a kernel. As a side note, this kernel is also referred to as the radial basis function kernel, or the RBF kernel. I’ll use <span class="math inline">\(K&#39;\)</span> for the function version and <span class="math inline">\(K\)</span> for the matrix version, both defined in a moment. The function is defined as</p>
-<p><span class="math display">\[K&#39;(x, z) = \exp\left(-\frac{||x-z||^2}{2\sigma^2}\right).\]</span></p>
-<p>Suppose we have a set of points <span class="math inline">\(\{x^{(1)}, \ldots, x^{(m)}\};\)</span> define matrix <span class="math inline">\(K\)</span> by letting <span class="math inline">\(K_{ij} = K&#39;(x^{(i)}, x^{(j)}).\)</span> By Mercer’s theorem, our job is to show that, for any vector <span class="math inline">\(z,\)</span> <span class="math inline">\(z^TKz \ge 0.\)</span></p>
-<p>NOTE The solution below is not correct. I’m working on updating it with a correct version.</p>
-<p>Let’s proceed as follows, using <span class="math inline">\(c = -\frac{1}{2\sigma^2}:\)</span></p>
+<p>Let’s confirm that the Gaussian kernel is indeed a kernel. As a side note, this kernel is also referred to as the radial basis function kernel, or the RBF kernel.</p>
+<p>I had some difficulty proving this myself, so I found <a href="http://stats.stackexchange.com/a/35638/123609">this answer by Douglas Zare</a> that I’ll use as the basis for this proof.</p>
+<p>The goal is to show that the function</p>
+<p><span class="math display">\[k(x, y) = \exp\left(\frac{-||x-y||^2}{2\sigma^2}\right)\]</span></p>
+<p>is a kernel.</p>
+<p>The proof will proceed by providing a function <span class="math inline">\(\phi_w\)</span> such that the inner product <span class="math inline">\(\langle\phi_x, \phi_y\rangle = k(x, y)\)</span> for any vectors <span class="math inline">\(x,y\in{\mathbb{R}}^n.\)</span> I’ll be using an inner product defined on functions of <span class="math inline">\({\mathbb{R}}^n\)</span> as in</p>
+<p><span class="math display">\[\langle f, g\rangle = \int_{{\mathbb{R}}^n} f(z) g(z) dz.\]</span></p>
+<p>Begin by letting <span class="math inline">\(c_\sigma = \left(\frac{\sqrt 2}{\sigma\sqrt\pi}\right)^{n/2}.\)</span> Define</p>
+<p><span class="math display">\[\phi_w(z) = c_\sigma\exp\left(\frac{-||z-w||^2}{\sigma^2}\right).\]</span></p>
+<p>Then</p>
+<p><span class="math display">\[\langle\phi_x, \phi_y\rangle
+  = \int_{{\mathbb{R}}^n} c_\sigma^2
+    \exp\left(\frac{-||z-x||^2}{\sigma^2}\right)
+    \exp\left(\frac{-||z-y||^2}{\sigma^2}\right) dz.\]</span></p>
+<p>Let</p>
+<p><span class="math display">\[a = \frac{x+y}{2}, \quad
+  b = \frac{x-y}{2}, \quad
+  v = z - a,\]</span></p>
+<p>so that</p>
 <p><span class="math display">\[\begin{aligned}
-z^TKz &amp; = z_i K_{ij} z_j \\
-      &amp; = z_i z_j \exp(c||x{^{(i)}}- x{^{(j)}}||^2) \\
-      &amp; = z_i z_j \exp\bigg(c\big(||x{^{(i)}}||^2 + ||x{^{(j)}}||^2 - 2\langle x{^{(i)}},
-           x{^{(j)}}\rangle\big) \bigg) \\
-      &amp; = z_i e^{c||x{^{(i)}}||^2} z_j e^{c||x{^{(j)}}||^2}
-              \exp\left(-2c\sum_k \big(x_k{^{(i)}}x_k{^{(j)}}\big)\right) \\
-      &amp; = z_i e^{c||x{^{(i)}}||^2} z_j e^{c||x{^{(j)}}||^2}
-              \prod_k e^{-2cx_k{^{(i)}}} e^{-2cx_k{^{(j)}}} \\
-      &amp; = \left(z_i e^{c||x{^{(i)}}||^2} \prod_k e^{-2cx_k{^{(i)}}}\right)
-          \left(z_j e^{c||x{^{(j)}}||^2} \prod_k e^{-2cx_k{^{(j)}}}\right) \\
-      &amp; = \left(z_i e^{c||x{^{(i)}}||^2} \prod_k e^{-2cx_k{^{(i)}}}\right)^2 \\
-      &amp; \ge 0.
+z-x &amp; = z - a - b = v - b, \\
+z-y &amp; = z - a + b = v + b. \\
 \end{aligned}\]</span></p>
-<p>That completes the proof.</p>
+<p>Then</p>
+<p><span class="math display">\[\begin{aligned}
+\langle\phi_x, \phi_y\rangle
+  &amp; = c_\sigma^2\int
+      \exp\left(\frac{-||v-b||^2 - ||v+b||^2}{\sigma^2}\right) dv \\
+  &amp; = c_\sigma^2 \int \exp\left(\frac{-2||v||^2 - 2||b||^2}{\sigma^2}\right)dv.
+\end{aligned}\]</span></p>
+<p>The last equation uses the facts that <span class="math inline">\(||v-b||^2 = \langle v-b, v-b\rangle = \langle v, v\rangle - 2\langle v, b\rangle + \langle b, b\rangle,\)</span> and that, similarly, <span class="math inline">\(||v+b||^2 = ||v||^2 + 2\langle v, b\rangle + ||b||^2.\)</span></p>
+<p>Continuing,</p>
+<p><span class="math display">\[\langle\phi_x, \phi_y\rangle
+  = c_\sigma^2 \exp\left(\frac{-2||b||^2}{\sigma^2}\right)
+    \int\exp\left(\frac{-2||v||^2}{\sigma^2}\right) dv.\]</span></p>
+<p>Make the substitution</p>
+<p><span class="math display">\[\frac{\sqrt 2 v}{\sigma} = u, \quad
+  dv = \left(\frac{\sigma}{\sqrt 2}\right)^n du.\]</span></p>
+<p>We get</p>
+<p><span class="math display">\[\begin{aligned}
+\langle\phi_x, \phi_y\rangle
+  &amp; = c_\sigma^2 \exp\left(\frac{-2||b||^2}{\sigma^2}\right)
+      \left(\frac{\sigma}{\sqrt 2}\right)^n
+      \int \exp(-||u||^2) du  \\
+  &amp; = c_\sigma^2 \exp\left(\frac{-2||b||^2}{\sigma^2}\right)
+      \left(\frac{\sigma\sqrt\pi}{\sqrt 2}\right)^n \\
+  &amp; = \exp\left(\frac{-2||x-y||^2}{4\sigma^2}\right) \\
+  &amp; = \exp\left(\frac{-||x-y||^2}{2\sigma^2}\right) \\
+  &amp; = k(x, y),
+\end{aligned}\]</span></p>
+<p>which completes the proof.</p>
 <div id="refs" class="references">
 
 </div>
